--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,9 @@
+// Futura PT Font
+@import url("https://use.typekit.net/lxb2ivc.css");
+
+// Freight Disp Font
+@import url("https://use.typekit.net/lxb2ivc.css");
+
 html {
   font-size: 62.5%;
   /* 62.5% of 16px is 10px which is 1rem */
