--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,2 +1,11 @@
 //! Main website variables
-$bg_site: #474747;
+$bg_site: #464646;
+
+//! Popover variables
+$bg_pop: #fff;
+$top_bottom_elements: #f5f5f5;
+$red_pop: #9f173d;
+
+//! Font variables
+$futura: "futura-pt", sans-serif;
+$frdisp: "freight-display-pro", serif;
