style and media queries

--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -9,3 +9,4 @@ $red_pop: #9f173d;
 //! Font variables
 $futura: "futura-pt", sans-serif;
 $frdisp: "freight-display-pro", serif;
+$smallfont: #febed5;
