--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,7 @@
 @import "_base";
 
 // import modules components
+@import "./modules/container";
+@import "./modules/popTop";
+@import "./modules/popBottom";
+@import "./modules/form";
