Javascript logic and Accessibility check

--- a/sass/modules/_form.scss
+++ b/sass/modules/_form.scss
@@ -1,4 +1,4 @@
-#input_selection {
+#input_selection form {
   // size media queries at 760px
   @media screen and (min-width: 760px) {
     display: flex;
@@ -62,4 +62,8 @@ input[type="checkbox"]:checked + label:after {
 
 #checkbox_1 {
   margin-left: -3rem;
+}
+
+label {
+  display: none;
 }
