--- a/sass/modules/_popTop.scss
+++ b/sass/modules/_popTop.scss
@@ -55,6 +55,22 @@
     text-transform: uppercase;
     line-height: 2.6rem;
     font-weight: 500;
+    width: 50%;
+    margin: 0 auto;
+
+    // size media queries at 500px
+    @media screen and (min-width: 500px) {
+      width: 40%;
+    }
+
+    // size media queries at 1200px
+    @media screen and (min-width: 1200px) {
+      width: 30%;
+    }
+
+    span {
+      color: $red_pop;
+    }
   }
 
   p:first-child {
@@ -78,7 +94,7 @@
 #separator {
   border-bottom: 1px solid $red_pop;
   width: 14%;
-  height: 50%;
+  height: 45%;
   position: absolute;
   left: 50%;
   transform: translate(-50%, -50%);
